[package]
name = "samplerate-rs"
version = "0.1.0"
edition = "2021"
authors = ["Frederick Gnodtke <frederick@gnodtke.net>"]
readme = "README.md"
categories = ["multimedia::audio"]
description = "A fork of the samplerate crate that uses the pure C2Rust transpiled version of libsamplerate"
repository = "https://github.com/MeadowlarkDAW/samplerate-rs"
keywords = ["audio", "samplerate"]
license = "BSD-2-Clause"

[dependencies]
#libsamplerate = "0.1"
libsamplerate = { git = "https://github.com/MeadowlarkDAW/rust-libsamplerate.git", branch = "master" }

[dev-dependencies]
hound = "3.4"
rstest = "0.6"
